--- a/Views/Articles/Detail.cshtml
+++ b/Views/Articles/Detail.cshtml
@@ -1,11 +1,9 @@
 @model Article
 @{
-    ViewData["Title"] = "Delete Article";
+    ViewData["Title"] = "Details";
 }
 
-<h1>Delete Article</h1>
-
-<h3>Are you sure you want to delete this?</h3>
+<h1>Article Details</h1>
 
 <div>
     <h4>@Model.Name</h4>
@@ -30,8 +28,7 @@
     </dl>
 </div>
 
-<form asp-action="DeleteConfirmed" method="post">
-    <input type="hidden" asp-for="Id" />
-    <button type="submit" class="btn btn-danger">Delete</button>
+<p>
+    <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-warning">Edit</a>
     <a asp-action="Index" class="btn btn-secondary">Back to List</a>
-</form>
+</p>
