--- a/Shop-RazorPages/Pages/Shared/_Layout.cshtml
+++ b/Shop-RazorPages/Pages/Shared/_Layout.cshtml
@@ -37,6 +37,9 @@
             <li class="nav-item">
               <a class="nav-link" asp-page="/Categories/Index">Categories</a>
             </li>
+            <li>
+                <a class="nav-link" asp-page="/Shop/Cart">Cart</a>
+            </li>
           </ul>
         </div>
       </div>
