feat: complete lab12

--- a/Shop-RazorPages/Pages/Shared/_Layout.cshtml
+++ b/Shop-RazorPages/Pages/Shared/_Layout.cshtml
@@ -46,6 +46,9 @@
             <li>
                 <a class="nav-link" asp-page="/Account/Register">Register</a>
             </li>
+            <li>
+                <a class="nav-link" asp-page="/Account/Login">Login</a>
+            </li>
           </ul>
         </div>
       </div>
